Modified ChangeLog. Tutorial section is now using <hx> tags instead of
Modified ChangeLog.
Tutorial section is now using <hx> tags instead of <div class="">.
Fixed a few validation problems in Perlotine tutorial.

--- a/tutorials/3d_Logo/index.html
+++ b/tutorials/3d_Logo/index.html
@@ -2,16 +2,16 @@
 <title>GIMP - 3-d Floating Logo</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">3-d Floating Logo</div>
+<h1>3-d Floating Logo</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
    This tutorial is aimed squarely at the novice GIMP user. The more experienced user may find some techniques here useful. 
    This is the same procedure I used to create the logo on my homepage, albeit with slightly different settings. I'll point
    out the differences as I go along. I've taken a lot of screen shots to support this tutorial, so enjoy :)
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="logo-00.png" alt=""/>
 </p>
@@ -20,7 +20,7 @@
   website at the time of writing uses 500px tables.
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="logo-01.png" alt=""/>
 </p>
@@ -31,7 +31,7 @@
   Do so by accessing the Layers menu (right click or Control+Click on the layer you wish to operate on) and select Layer to Imagesize.
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="logo-02.png" alt=""/>
 </p>
@@ -42,7 +42,7 @@
   Keep Trans. means "Keep Transparency"; this will ensure that any transformations or fills made to that layer will only affect the non-transparent part of the image.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="logo-03.png" alt=""/>
 </p>
@@ -54,7 +54,7 @@
   You will need to make sure that the layer boundary is larger than the layer so that the blur can spread nicely. Step 2 mentions this.
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p class="images">
   <img src="logo-04.png" alt=""/>
 </p>
@@ -62,7 +62,7 @@
   Duplicate the blurred layer once (tmp1 and tmp2). These layers are used to create the edge lighting for the text.
 </p>
 
-<div class="subtitle">Step 6</div>
+<h2>Step 6</h2>
 <p class="images">
   <img src="logo-05.png" alt=""/>
 </p>
@@ -73,7 +73,7 @@
   a very similar thing to that one soon.
 </p>
 
-<div class="subtitle">Step 7</div>
+<h2>Step 7</h2>
 <p class="images">
   <img src="logo-06.png" alt=""/>
 </p>
@@ -83,7 +83,7 @@
   This was done to make sure I could see how far I moved this layer during step 6.
 </p>
 
-<div class="subtitle">Step 8</div>
+<h2>Step 8</h2>
 <p class="images">
   <img src="logo-07.png" alt=""/>
 </p>
@@ -91,7 +91,7 @@
   Now that the layer is selected...
 </p>
 
-<div class="subtitle">Step 9</div>
+<h2>Step 9</h2>
 <p class="images">
   <img src="logo-08.png" alt=""/>
 </p>
@@ -99,7 +99,7 @@
   Select the highlight layer and... 
 </p>
 
-<div class="subtitle">Step 10</div>
+<h2>Step 10</h2>
 <p class="images">
   <img src="logo-09.png" alt=""/>
 </p>
@@ -111,7 +111,7 @@
   then make the cut from the lowlight layer. Once you're done, delete the two blurred layers (tmp1 and tmp2). 
 </p>
 
-<div class="subtitle">Step 11</div>
+<h2>Step 11</h2>
 <p class="images">
   <img src="logo-10.png" alt=""/>
 </p>
@@ -120,7 +120,7 @@
   to clean up temporary layers occasionally.
 </p>
 
-<div class="subtitle">Step 12</div>
+<h2>Step 12</h2>
 <p class="images">
   <img src="logo-11.png" alt=""/>
 </p>
@@ -130,7 +130,7 @@
   Keep Trans. is checked when you fill the layer.
 </p>
 
-<div class="subtitle">Step 13</div>
+<h2>Step 13</h2>
 <p class="images">
    <img src="logo-12.png" alt=""/>
 </p>
@@ -138,7 +138,7 @@
   As you can see, it's starting to look like something now.
 </p>
 
-<div class="subtitle">Step 14</div>
+<h2>Step 14</h2>
 <p class="images">
   <img src="logo-13.png" alt=""/>
 </p>
@@ -147,7 +147,7 @@
   layers stack until it's underneath the original text layer.
 </p>
 
-<div class="subtitle">Step 15</div>
+<h2>Step 15</h2>
 <p class="images">
   <img src="logo-14.png" alt=""/>
 </p>
@@ -158,7 +158,7 @@
   fill it (step 17). And below is what it looks like.
 </p>
 
-<div class="subtitle">Step 16</div>
+<h2>Step 16</h2>
 <p class="images">
   <img src="logo-15.png" alt=""/>
 </p>
@@ -166,7 +166,7 @@
   And this is what it looks like.
 </p>
 
-<div class="subtitle">Step 17</div>
+<h2>Step 17</h2>
 <p class="images">
   <img src="logo-16.png" alt=""/>
 </p>
@@ -181,7 +181,7 @@
   toolbox color swatch to the layer.
 </p>
 
-<div class="subtitle">Step 18</div>
+<h2>Step 18</h2>
 <p class="images">
   <img src="logo-17.png" alt=""/>
 </p>
@@ -189,7 +189,7 @@
   This is what the Layers, Channels, &amp; Paths dialog should look like. 
 </p>
 
-<div class="subtitle">Step 19</div>
+<h2>Step 19</h2>
 <p class="images">
   <img src="logo-18.png" alt=""/>
 </p>
@@ -197,7 +197,7 @@
   I've duplicated the highlight and lowlight layers and made them all blend with the lower layers using the Overlay mode. This helps to make the edges more 3D.
 </p>
 
-<div class="subtitle">Step 20</div>
+<h2>Step 20</h2>
 <p class="images">
   <img src="logo-19.png" alt=""/>
 </p>
@@ -205,7 +205,7 @@
   Create a new transparent layer called rust and select the bezier tool (shown here as the depressed button).
 </p>
 
-<div class="subtitle">Step 21</div>
+<h2>Step 21</h2>
 <p class="images">
   <img src="logo-20.png" alt=""/>
 </p>
@@ -214,7 +214,7 @@
   layer to start a selection that looks like...
 </p>
 
-<div class="subtitle">Step 22</div>
+<h2>Step 22</h2>
 <p class="images">
   <img src="logo-21.png" alt=""/>
 </p>
@@ -224,7 +224,7 @@
   Use <span class="filter">&lt;Image&gt;Select-&gt;Feather</span> to feather (blur) the selection. I used a value of about 10 pixels.
 </p>
 
-<div class="subtitle">Step 23</div>
+<h2>Step 23</h2>
 <p class="images">
   <img src="logo-22.png" alt=""/>
 </p>
@@ -235,7 +235,7 @@
   This will leave only the part of the rust layer that actually covers the letters and not the extra. 
 </p>
 
-<div class="subtitle">Step 24</div>
+<h2>Step 24</h2>
 <p class="images">
   <img src="logo-23.png" alt=""/>
 </p>
@@ -243,7 +243,7 @@
   Change the Layer Mode of the rust layer to Muliply (Burn). 
 </p>
 
-<div class="subtitle">Step 25</div>
+<h2>Step 25</h2>
 <p class="images">
   <img src="logo-24.png" alt=""/>
 </p>
@@ -251,7 +251,7 @@
   The image should now look a little like this. Don't worry, it'll look better soon.
 </p>
 
-<div class="subtitle">Step 26</div>
+<h2>Step 26</h2>
 <p class="images">
   <img src="logo-25.png" alt=""/>
 </p>
@@ -259,7 +259,7 @@
   With the rust layer selected, add a Layer Mask.
 </p>
 
-<div class="subtitle">Step 27</div>
+<h2>Step 27</h2>
 <p class="images">
   <img src="logo-26.png" alt=""/>
 </p>
@@ -267,7 +267,7 @@
   Making sure that you reset the color swatches on the toolbox, use the gradient tool to make a gradient in the Layer Mask so it looks like this. 
 </p>
 
-<div class="subtitle">Step 28</div>
+<h2>Step 28</h2>
 <p class="images">
   <img src="logo-27.png" alt=""/>
 </p>
@@ -275,19 +275,21 @@
   The image should now look like this.
 </p>
 
-<div class="subtitle">Final</div>
+<h2>Final</h2>
 <p class="images">
   <img src="logo-28.png" alt=""/>
 </p>
 <p>
   With a little playing around you can get to this. I duplicated the rust layer and moved them (the original rust and the copy) down the stack until 
   the highlight and lowlight layers were above them. I also duplicated the original text layer, switched on Keep Trans., and used 
-  <span class="filter">&lt;Image&gt;Render-&gt;Clouds-&gt;Solid Noise</span> to add a bit of interest to the layer. Try using the Curves tool to help with this. 
+  <span class="filter">&lt;Image&gt;Render-&gt;Clouds-&gt;Solid Noise</span> to add a bit of interest to the layer. 
+  Try using the Curves tool to help with this. 
   You may also notice that the outline layer is blurred. Sometimes this can help.
   The idea is, try stuff and find out.
 </p>
 <p>
-  Well, thats it. Hope that taught you the power of selections and layer modes to some degree. There are many people who tout the use of channel masks,
+  Well, thats it. Hope that taught you the power of selections and layer modes to some degree. 
+  There are many people who tout the use of channel masks,
   but don't under estimate the power of selections to do your dirty work.
 </p>
 
