--- a/tutorials/Advanced_Animations/index.html
+++ b/tutorials/Advanced_Animations/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Advanced Animations Tutorial</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Advanced Animations Tutorial</div>
+<h1>Advanced Animations Tutorial</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   Welcome to the advanced GIMP animation tutorial. Here you'll learn how to use the GAP, GIMP animation package. 
   It is very advanced, but the user interface might be confusing for some at first. 
@@ -14,7 +14,7 @@
   Please go to the "<a href="/tutorials/Using_GAP/">Using GAP</a>" tutorial to learn more about the tool.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <a href="gap-static.xcf.bz2"><img src="gap-static.png" alt=""/></a>
 </p>
@@ -24,7 +24,7 @@
   URL to the open dialog. Gimp will download the compressed image and open it transparently so you don't have to bother.
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="gap-duplicate.png" alt=""/>
 </p>
@@ -40,7 +40,7 @@
   We'll create a 20 frame animation, so the first thing will be to copy the first frame 19 times using the video/duplicate frames function.
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="gap-source.png" alt=""/>
   <img src="gap-move.png" alt=""/>
@@ -61,7 +61,7 @@
   just set a specific frame to the active point using the keyframe slider. We won't need it fof the logo animation, so let's just press ok for now.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="gap-navi.png" alt=""/>
   <img src="gap-final.gif" alt=""/>
@@ -79,7 +79,7 @@
   You can now try to recreate the animation yourself, you know tool to be able to. 
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p>
   All we need to do now is to save the animation. You can choose to go for the GIF format as I did with the image above, 
   but the filesize is too huge to be widely accepted on the web anyway, so you can consider using a regular animation format 
