--- a/tutorials/Anti-Aliased_Threshold/index.html
+++ b/tutorials/Anti-Aliased_Threshold/index.html
@@ -2,16 +2,16 @@
 <title>GIMP - Anti-Aliased Threshold Tutorial</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Anti-Aliased Threshold Tutorial</div>
+<h1>Anti-Aliased Threshold Tutorial</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   The threshold plug-in works by dividing the image into two parts, dark and light, producing a 2 color image. This is often not
   the desired result, for some images anti-aliasing is needed, but the threshold plug-in
   cannot provide that. With a little utilization of the curves plug-in, we get nice results.
 </p>
 
-<div class="subtitle">Problems with the threshold</div>
+<h2>Problems with the threshold</h2>
 <p class="images">
   <img src="original.jpg" alt=""/>
   <img src="threshold.jpg" alt=""/>
@@ -21,7 +21,7 @@
   for the Threshold plug-in were used (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Threshold</span>). The resulting image is very blocky and aliased.
 </p>
 
-<div class="subtitle">The Curves Trick</div>
+<h2>The Curves Trick</h2>
 <p class="images">
   <img src="curves.jpg" alt=""/>
   <img src="finished.jpg" alt=""/>
@@ -36,7 +36,7 @@
   the right.
 </p>
 
-<div class="subtitle">A neat addition</div>
+<h2>A neat addition</h2>
 <p class="images">
   <img src="effect.jpg" alt=""/>
 </p>
