--- a/tutorials/Basic_Scheme2/index.html
+++ b/tutorials/Basic_Scheme2/index.html
@@ -2,12 +2,12 @@
 <title>GIMP - Basic Scheme2</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Basic Scheme2</div>
+<h1>Basic Scheme2</h1>
 <p>
   This article was originally published in <a href="http://www.linux-mag.com/2002-01/power_01.html">Linux Magazine, January 2002</a>.
 </p>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   Unix (and by association, Linux) provides the user with an environment full of possibilities. To turn these possibilities into reality, 
   a Unix user must be technical in two senses of the word. Of course, he must understand <i>technology</i>, but to really shine, 
@@ -37,7 +37,7 @@
   let's take a look at a very small subset of Scheme.
 </p>
 
-<div class="subtitle">A Crash Course in Scheme</div>
+<h2>A Crash Course in Scheme</h2>
 <p>
   Scheme has a simple and uniform syntax compared to most other languages, but there's still no way to properly explain it in this limited space. 
   With that in mind, we'll cover the bare minimum of Scheme that you'll need to get started with GIMP scripting. Fortunately, 
@@ -112,7 +112,7 @@
   so why not make the most of them? You can take a look at <i>Resources</i> for more information.
 </p>
 
-<div class="subtitle">The GIMP API</div>
+<h2>The GIMP API</h2>
 <p>
   Now that we know a little Scheme, we can start taking a look at how it is applied to the GIMP.
 </p>
@@ -210,13 +210,13 @@
   <i>Figure Two: A simple drawing.</i>
 </p>
 
-<div class="subtitle">Bigger and Better Things...</div>
+<h2>Bigger and Better Things...</h2>
 <p>
   Now that we have a foundation of knowledge to work from, we can move on to more interesting topics. Study Scheme and the GIMP on your own. 
   See <i>Resources</i> for good places to start your self-education.
 </p>
 
-<div class="subtitle">Resources</div>
+<h2>Resources</h2>
 <ul>
   <li><a href="http://www.cs.rice.edu/~dorai/t-y-scheme/t-y-scheme-Z-H-1.html">Teach Yourself Scheme in Fixnum Days</a></li>
   <li><a href="http://manual.gimp.org/manual/GUM/write_scriptfu3.html">Mike Terry's Black Belt School of Script-Fu</a></li>
