--- a/tutorials/Bezier_Selections/index.html
+++ b/tutorials/Bezier_Selections/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Bezier Selections</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Bezier Selections</div>
+<h1>Bezier Selections</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
    Bezier selection is a powerful tool in The Gimp. The rectangle- and ellipse-selections are not very flexible if you happen to need something more special.
    And since many of us gimpers don't have a graphics tablet, it's not so easy to make the mouse pointer move the way you want. Bezier selection fixes the 
@@ -12,7 +12,7 @@
    "Drawing Shapes with Bezier" for more information on this great tool. 
 </p>
 
-<div class="subtitle">What is it?</div>
+<h2>What is it?</h2>
 <p class="images">
   <img src="bezier_box.gif" alt=""/>
 </p>
@@ -24,7 +24,7 @@
    Of course you can have as many points as you need. 
 </p>
 
-<div class="subtitle">Modifying the curves</div>
+<h2>Modifying the curves</h2>
 <p class="images">
   <img src="bezier_curve.gif" alt=""/>
 </p>
@@ -38,7 +38,7 @@
     by dragging the handles around. 
 </p>
 
-<div class="subtitle">A Few Tips</div>
+<h2>A Few Tips</h2>
 <ol>
   <li>Always before modifying any points or handles, click the handle or a point to make it active</li>
   <li>To move just one handle and leave the opposite side in its place, click on the handle to activate it and press shift while dragging it</li>
