--- a/tutorials/Blending_Exposures/index.html
+++ b/tutorials/Blending_Exposures/index.html
@@ -2,12 +2,12 @@
 <title>GIMP - Blending Exposures</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Blending Exposures</div>
+<h1>Blending Exposures</h1>
 <p>
   Text and images Copyright (C) 2002 <a href="mailto:eric@redskiesatnight.com">Eric R. Jeschke</a> and may not be used without permission of the author.
 </p>
 
-<div class="subtitle"></div>
+<h2>Intention</h2>
 <p class="images">
   <img src="before-light.jpg" alt=""/>
   <img src="before-dark.jpg" alt=""/>
@@ -30,13 +30,13 @@
   photography web site (great web site BTW, I recommend it).
 </p>
 
-<div class="subtitle">The Procedure</div>
+<h2>The Procedure</h2>
 <p>
   The basic technique is to create a layer above the image that contains the other exposure of the same scene. Finally, we apply a layer mask to the this 
   layer which makes parts of the image transparent that we want to show through from below.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="image-original-light.jpg" alt=""/>
   <img src="image-original-dark.jpg" alt=""/>
@@ -45,7 +45,7 @@
   Here are the two exposures, loaded into the GIMP. I am going to sandwich these on different layers and then combine them with a layer mask.
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="layers1.jpg" alt=""/>
   <img src="newlayeroptions.jpg" alt=""/>
@@ -59,7 +59,7 @@
   Go the image that is going to be on the bottom. Open the Layers dialog (<kbd>Ctrl+L</kbd>) and click on the new layer button (<img src="newlayer.jpg" alt=""/>) to create a new layer.
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="layers3.jpg" alt=""/>
   <img src="layers4.jpg" alt=""/>
@@ -69,7 +69,7 @@
   then go to the bottom image window and paste (<kbd>Ctrl+V</kbd>). In the Layers dialog, click on the anchor button (<img src="anchor.jpg" alt=""/>) to anchor the floating image.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="layers5.jpg" alt=""/>
   <img src="image-composite-paste.jpg" alt=""/>
@@ -81,7 +81,7 @@
   (Even if you had a film camera on a tripod, it is difficult to get two successive scans to feed through in perfect alignment.)
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p class="images">
   <img src="layers6.jpg" alt=""/>
 </p>
@@ -97,7 +97,7 @@
   When you get close to alignment, zoom in to get a good close-up view and get the best possible fit.
 </p>
 
-<div class="subtitle">Step 6</div>
+<h2>Step 6</h2>
 <p class="images">
   <img src="addmaskoptions.jpg" alt=""/>
   <img src="layers7.jpg" alt=""/>
@@ -106,7 +106,7 @@
   In the Layers dialog, right-click on the upper layer and select Add Layer Mask. In the Add Mask Options dialog, select White (Full Opacity) and click OK.
 </p>
 
-<div class="subtitle">Step 7</div>
+<h2>Step 7</h2>
 <p class="images">
   <img src="image-select1.jpg" alt=""/>
   <img src="image-fill.jpg" alt=""/>
@@ -118,7 +118,7 @@
   inside all the borders of the area you want to paint, as shown at right. Then using the fill tool (<img src="fill.jpg" alt=""/>) fill the selection with black.
 </p>
 
-<div class="subtitle">Step 8</div>
+<h2>Step 8</h2>
 <p class="images">
   <img src="brushes1.jpg" alt=""/>
   <img src="image-paint1.jpg" alt=""/>
@@ -130,7 +130,7 @@
   Notice that I still have the opacity cranked down on the upper layer so that I can see both layers.
 </p>
 
-<div class="subtitle">Step 9</div>
+<h2>Step 9</h2>
 <p class="images">
   <img src="brushes2.jpg" alt=""/>
 </p>
@@ -145,7 +145,7 @@
   Don't worry too much about the borders, since we'll probably have to touch those up anyway.
 </p>
 
-<div class="subtitle">Step 10</div>
+<h2>Step 10</h2>
 <p class="images">
   <img src="image-preclone.jpg" alt=""/>
   <img src="image-postclone.jpg" alt=""/>
@@ -174,7 +174,7 @@
   These tools are great for dealing with that even if I were not blending two exposures.
 </p>
 
-<div class="subtitle">Final Step</div>
+<h2>Final Step</h2>
 <p class="images">
   <img src="image-finished.jpg" alt=""/>
 </p>
@@ -182,7 +182,7 @@
   Finished. The image still has some problems with blown out highlights in the sunlight of the rock face. It is also a little too dark in the foreground shadow.
 </p>
 
-<div class="subtitle">Further Reading on Blending Exposures</div>
+<h2>Further Reading on Blending Exposures</h2>
 <ul>
   <li><a href="http://www.digitalsecrets.net/secrets/DynamicRanger.html">Dynamic Ranger.</a></li>
   <li><a href="http://www.vincentbockaert.com/Tutorials/ImagesFramePST_08_PS.htm">Vincent Bockaert's method of blending in Photoshop</a></li>
