--- a/tutorials/Blown_Out_Highlights/index.html
+++ b/tutorials/Blown_Out_Highlights/index.html
@@ -2,12 +2,12 @@
 <title>GIMP - Salvaging an Image with Blown Out Highlights</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Salvaging an Image with Blown Out Highlights</div>
+<h1>Salvaging an Image with Blown Out Highlights</h1>
 <p>
   Text and images Copyright (C) 2002 <a href="mailto:eric@redskiesatnight.com">Eric R. Jeschke</a> and may not be used without permission of the author.
 </p>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p class="images">
   <img src="before.jpg" alt=""/>
   <img src="after.jpg" alt=""/>
@@ -21,12 +21,12 @@
   I find that if I treat my digital camera as if I were shooting slide film the exposure rules are about the same.
 </p>
 
-<div class="subtitle">The Procedure</div>
+<h2>The Procedure</h2>
 <p>
   The basic technique is to graft matching areas of the image into the burned out parts using the clone tool and then to use several additional tools to blend the seams of the cloned areas.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="original.jpg" alt=""/>
 </p>
@@ -43,7 +43,7 @@
   Great image...could I rescue it?
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="colorpicker1.jpg" alt=""/>
 </p>
@@ -53,7 +53,7 @@
   If there had been some detail left here I might have tried a variation on the contrast masking technique or the "digital" neutral density filter first.
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="threshold.jpg" alt=""/>
   <img src="threshold-image.jpg" alt=""/>
@@ -69,7 +69,7 @@
   This causes all the pixels in the image from 250-255 to go white and all the others to go black.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="channels1.jpg" alt=""/>
   <img src="newchanneloptions.jpg" alt=""/>
@@ -83,7 +83,7 @@
   Click on the Channels tab and add a new channel by clicking on the new channel button.
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p class="images">
   <img src="image-channel-paste.jpg" alt=""/>
   <img src="channels3.jpg" alt=""/>
@@ -102,7 +102,7 @@
   You can close the threshold image now.
 </p>
 
-<div class="subtitle">Step 6</div>
+<h2>Step 6</h2>
 <p class="images">
   <img src="featherselection.jpg" alt=""/>
   <img src="image2.jpg" alt=""/>
@@ -116,7 +116,7 @@
   Finally (important!), click back on the Layers tab and select the Background layer, so the selection and further operations will apply to the image and not the channel mask.
 </p>
 
-<div class="subtitle">Step 7</div>
+<h2>Step 7</h2>
 <p class="images">
   <img src="tooloptions-clone.jpg" alt=""/>
   <img src="brushes1.jpg" alt=""/>
@@ -138,7 +138,7 @@
   <span class="filter">&lt;Image&gt;Select-&gt;None</span> and zoom out to inspect your work.
 </p>
 
-<div class="subtitle">Step 8</div>
+<h2>Step 8</h2>
 <p class="images">
   <img src="tooloptions-colorpicker.jpg" alt=""/>
   <img src="colorpicker2.jpg" alt=""/>
@@ -188,7 +188,7 @@
   Right Image: zoomed view after the clone (previous step) and after this step.
 </p>
 
-<div class="subtitle">Step 9</div>
+<h2>Step 9</h2>
 <p class="images">
   <img src="before-512x384.jpg" alt=""/>
   <img src="after-512x384.jpg" alt=""/>
