--- a/tutorials/Blur_Overlays/index.html
+++ b/tutorials/Blur_Overlays/index.html
@@ -2,12 +2,12 @@
 <title>GIMP - Gaussian Blur Overlays</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Gaussian Blur Overlays</div>
+<h1>Gaussian Blur Overlays</h1>
 <p>
   Text and images Copyright (C) 2002 <a href="mailto:eric@redskiesatnight.com">Eric R. Jeschke</a> and may not be used without permission of the author.
 </p>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p class="images">
   <img src="before.jpg" alt=""/>
   <img src="after.jpg" alt=""/>
@@ -22,7 +22,7 @@
   <a href="http://www.luminous-landscape.com/">luminous-landscape.com web site</a> (great photography web site BTW; I recommend it).
 </p>
 
-<div class="subtitle">The Procedure</div>
+<h2>The Procedure</h2>
 <p class="images">
   <img src="image-original.jpg" alt=""/>
 </p>
@@ -30,7 +30,7 @@
   Here is the original example image, loaded into The GIMP.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="layers1.jpg" alt=""/>
   <img src="layers2.jpg" alt=""/>
@@ -40,7 +40,7 @@
   Layers dialog (<img src="layerdup.jpg" alt=""/>).
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="editlayerattr.jpg" alt=""/>
   <img src="layers3.jpg" alt=""/>
@@ -51,7 +51,7 @@
   or more importantly, if you save the file with layers and open it six months later.
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="layers4.jpg" alt=""/>
 </p>
@@ -73,7 +73,7 @@
   Just click on the "eye" next to the upper layer.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="gaussblur.jpg" alt=""/>
   <img src="image-overlay-blur.jpg" alt=""/>
@@ -96,7 +96,7 @@
   Fortunately we can apply a simple extension to the above technique to protect the highlights.
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p class="images">
   <img src="layers-duplicate.jpg" alt=""/>
 </p>
@@ -106,7 +106,7 @@
   Flatten the duplicate (<span class="filter">&lt;Image&gt;Layers-&gt;Flatten Image</span>).
 </p>
 
-<div class="subtitle">Step 6</div>
+<h2>Step 6</h2>
 <p class="images">
   <img src="threshold.jpg" alt=""/>
   <img src="image-threshold.jpg" alt=""/>
@@ -120,7 +120,7 @@
   You only need to approximate this, since we're going to clean up the mask anyway.
 </p>
 
-<div class="subtitle">Step 7</div>
+<h2>Step 7</h2>
 <p class="images">
   <img src="image-threshold-marqueeselect.jpg" alt=""/>
 </p>
@@ -139,7 +139,7 @@
   I then "feathered" the mask so that it will blend the layers without a harsh transition by applying a 6 pixel gaussian blur to the mask.
 </p>
 
-<div class="subtitle">Step 8</div>
+<h2>Step 8</h2>
 <p class="images">
   <img src="image-threshold-blur-invert.jpg" alt=""/>
 </p>
@@ -148,7 +148,7 @@
   the combined layers that you want to keep and the black parts correspond to the parts that should only reflect the original image (the highlights).
 </p>
 
-<div class="subtitle">Step 9</div>
+<h2>Step 9</h2>
 <p class="images">
   <img src="addmaskoptions.jpg" alt=""/>
   <img src="layers5.jpg" alt=""/>
@@ -168,7 +168,7 @@
   <b>Tip:</b> <kbd>Ctrl-click</kbd> on the layer mask icon in the Layers dialog to toggle the effect of the layer mask to compare the image with and without the highlight mask.
 </p>
 
-<div class="subtitle">Step 10</div>
+<h2>Step 10</h2>
 <p class="images">
   <img src="image-final.jpg" alt=""/>
   <img src="image-original.jpg" alt=""/>
@@ -177,7 +177,7 @@
   Here's the result. Compare to the original image (right image). I would flatten and apply a smart sharpening (edges) to finish it out.
 </p>
 
-<div class="subtitle">Tips</div>
+<h2>Tips</h2>
 <ul>
   <li>Try other layer blending modes. "Multiply" often works well, but creates an even darker image than "Overlay"; you may have to really crank up 
   the levels on the upper layer. One nice thing about Multiply is that you probably won't need the highlights mask.
@@ -187,7 +187,7 @@
   </li>
 </ul>
 
-<div class="subtitle">Other Examples</div>
+<h2>Other Examples</h2>
 <p class="images">
   <img src="example2-before.jpg" alt=""/>
   <img src="example2-after.jpg" alt=""/>
