--- a/tutorials/Borders_On_Selections/index.html
+++ b/tutorials/Borders_On_Selections/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Borders On Selections</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Borders On Selections</div>
+<h1>Borders On Selections</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p class="images">
   <img src="img14_step1.png" alt=""/>
 </p>
@@ -15,7 +15,7 @@
   on the image), by going to <span class="filter">&lt;Image&gt;Edit-&gt;Stroke</span>.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="img13_tools.png" alt=""/>
 </p>
@@ -25,7 +25,7 @@
   at the beggining of the selection process will add the selection to what is already selected, while holding the control key will substract from it.
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="img16_step2.png" alt=""/>
 </p>
@@ -33,7 +33,7 @@
   Use the selection tools to create a selection with the desired shape.
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="img15_brushes.png" alt=""/>
 </p>
@@ -42,7 +42,7 @@
   for the brush. Brush selection dialog 
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="img17_result.png" alt=""/>
 </p>
@@ -51,7 +51,7 @@
   the result for the selection made above:
 </p>
 
-<div class="subtitle">Examples</div>
+<h2>Examples</h2>
 <p class="images">
   <img src="img18_example1.png" alt=""/>
   <img src="img19_example2.jpg" alt=""/>
