--- a/tutorials/Changing_Background_Color_2/index.html
+++ b/tutorials/Changing_Background_Color_2/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Changing Background Color 2</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Changing Background Color 2</div>
+<h1>Changing Background Color 2</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p class="images">
   <img src="img1_initial.jpg" alt=""/>
 </p>
@@ -13,7 +13,7 @@
   With gimp there are many ways to achieve this, one of which is using a plug-in specifically designed for this: Changing Background Color 1.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="img3_step1.png" alt=""/>
 </p>
@@ -22,7 +22,7 @@
   is to click on the image with the right mouse button, and choose the option <span class="filter">&lt;Image&gt;Select-&gt;By Color</span> as seen above:
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="img4_step2.png" alt=""/>
 </p>
@@ -35,7 +35,7 @@
   it if you're selecting more then you want. Select by color dialog 
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="img5_step3.png" alt=""/>
 </p>
@@ -44,7 +44,7 @@
   If that didn't select all the color you want, continue clicking on the unselected parts until you get the desired result.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="img6_step4.png" alt=""/>
 </p>
@@ -53,7 +53,7 @@
   To do that you have to use the right button on the mouse to get the image menu and go to layers and add alpha channel.
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p class="images">
   <img src="img7_step5.png" alt=""/>
 </p>
@@ -62,7 +62,7 @@
   and the image background will be gone.
 </p>
 
-<div class="subtitle">Step 6</div>
+<h2>Step 6</h2>
 <p class="images">
   <img src="img8_step6.png" alt=""/>
 </p>
@@ -72,7 +72,7 @@
   You can now use this image in a composition or in a web page with a different background like below:
 </p>
 
-<div class="subtitle">Final</div>
+<h2>Final</h2>
 <p class="images">
   <img src="img2_final.png" alt=""/>
 </p>
