--- a/tutorials/Coloring_A_BW_Sketch/index.html
+++ b/tutorials/Coloring_A_BW_Sketch/index.html
@@ -2,15 +2,15 @@
 <title>GIMP - Coloring A BW Sketch</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Coloring A BW Sketch</div>
+<h1>Coloring A BW Sketch</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
   First of all you have to acquire through a scanner or something similar your sketch. It doesn't necessitate to be truly a black and white image (2 colors),
   often a well contrasted grayscale image is better (use contrast autosketch or/and the brightness-contrast tools).
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="hikachan_t0.jpg" alt=""/>
 </p>
@@ -19,7 +19,7 @@
   From now the sketch layer will stay forever over the others.
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="hikachan_t1.jpg" alt=""/>
 </p>
@@ -31,7 +31,7 @@
   we will see that some stuff will "disappear", covered by other layers.
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="hikachan_t2.jpg" alt=""/>
 </p>
@@ -40,7 +40,7 @@
   For first you should fill with the base colour the shapes (use a paint tool), then apply (with the airbrush) darker shades on the edges and brighter ones over the cheeks.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="hikachan_t3.jpg" alt=""/>
 </p>
@@ -49,7 +49,7 @@
   the doughnut shading without the white text (that should stay as brighter as possible).
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p class="images">
   <img src="hikachan_t4.jpg" alt=""/>
 </p>
@@ -59,7 +59,7 @@
   I.e. you can add some shadows over the forehead by painting over these zones.
 </p>
 
-<div class="subtitle">Final</div>
+<h2>Final</h2>
 <p class="images">
   <img src="hikachan_t5.jpg" alt=""/>
 </p>
