--- a/tutorials/ContrastMask/index.html
+++ b/tutorials/ContrastMask/index.html
@@ -2,12 +2,12 @@
 <title>GIMP - Creating a Contrast Mask</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Creating a Contrast Mask</div>
+<h1>Creating a Contrast Mask</h1>
 <p>
   Text and images Copyright (C) 2002 <a href="mailto:eric@redskiesatnight.com">Eric R. Jeschke</a> and may not be used without permission of the author.
 </p>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p class="images">
   <img src="before.jpg" alt=""/>
   <img src="after.jpg" alt=""/>
@@ -32,7 +32,7 @@
   Experiment to see if it can work for your particular image.
 </p>
 
-<div class="subtitle">The Procedure</div>
+<h2>The Procedure</h2>
 <p class="images">
   <img src="original.jpg" alt=""/>
 </p>
@@ -44,7 +44,7 @@
   We want to brighten the dark areas a little and darken the light areas a little. In other words, reduce contrast.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="layers2.jpg" alt=""/>
 </p>
@@ -52,7 +52,7 @@
   Open the Layers dialog. Right-click on the Background layer and select Duplicate (there is also a button for this in the bottom button bar of the Layers dialog.
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="editlayerattr.jpg" alt=""/>
   <img src="layers3.jpg" alt=""/>
@@ -62,7 +62,7 @@
   but it is helpful to prevent confusion about what is on each layer, especially if you add some additional layers for other editing purposes).
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="image2.jpg" alt=""/>
 </p>
@@ -71,7 +71,7 @@
   The image should look B&amp;W.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="image3.jpg" alt=""/>
 </p>
@@ -80,7 +80,7 @@
   We're going to combine this with the original (light with dark, dark with light) to reduce the overall contrast.
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p class="images">
   <img src="layers4.jpg" alt=""/>
   <img src="image4.jpg" alt=""/>
@@ -91,7 +91,7 @@
   Don't worry, we're not done yet.
 </p>
 
-<div class="subtitle">Step 6</div>
+<h2>Step 6</h2>
 <p class="images">
   <img src="original.jpg" alt=""/>
   <img src="image5.jpg" alt=""/>
@@ -107,7 +107,7 @@
   The image at top left is the original, the top right is with the contrast mask.
 </p>
 
-<div class="subtitle">Step 7</div>
+<h2>Step 7</h2>
 <p class="images">
   <img src="contrastdialog.jpg" alt=""/>
   <img src="imagewtypcontrastreduction.jpg" alt=""/>
@@ -118,7 +118,7 @@
   This one looks kind of flat by comparison.
 </p>
 
-<div class="subtitle">Step 8</div>
+<h2>Step 8</h2>
 <p class="images">
   <img src="histogram-before.jpg" alt="Histogram-Before"/>
   <img src="histogram-after.jpg" alt="Histogram-After"/>
@@ -131,7 +131,7 @@
   Note how the typical contrast adjustment has lost a lot of values at both ends, but the mask technique basically preserved the entire scale.
 </p>
 
-<div class="subtitle">Step 9</div>
+<h2>Step 9</h2>
 <p class="images">
   <img src="layers5.jpg" alt=""/>
 </p>
@@ -140,7 +140,7 @@
   To do that, right-click on the image and select <span class="filter">&lt;Image&gt;Layers-&gt;Flatten Image</span>.
 </p>
 
-<div class="subtitle">Fine Tuning</div>
+<h2>Fine Tuning</h2>
 <p>
   Now that your contrast mask is created, it's time to fine tune it. Here are some things you can do:
 </p>
@@ -152,13 +152,13 @@
   the contrast mask to apply to certain areas of the image (see my example of this below).</li>
 </ul>
 
-<div class="subtitle">Tips</div>
+<h2>Tips</h2>
 <ul>
   <li>See <a href="http://www.vinberg.nu/photography/articles/contrast_masking.htm">this article</a> for some informative tests 
   on the effects of the Gaussian Blur step on the contrast mask.</li>
 </ul>
 
-<div class="subtitle">Other Examples</div>
+<h2>Other Examples</h2>
 <p class="images">
   <img src="tree.jpg" alt=""/>
   <img src="treewcmask.jpg" alt=""/>
