--- a/tutorials/Creating_Icons/index.html
+++ b/tutorials/Creating_Icons/index.html
@@ -2,20 +2,20 @@
 <title>GIMP - Creating Icons</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Creating Icons</div>
+<h1>Creating Icons</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
    Almost every desktop enviroment I've seen has a special application for creating icons, usually a very limited drawing application. 
    In this short tutorial, we'll show you how GIMP (GNU Image Manipulation Program) can help you create icons for your desktop.
 </p>
 
-<div class="subtitle">Before You Begin</div>
+<h2>Before You Begin</h2>
 <p>
   As with any new task, it will help to have a little background information:
 </p>
 
-<div class="subtitle">Filenames and Structure</div>
+<h2>Filenames and Structure</h2>
 <p class="images">
   <img src="files.png" alt=""/>
 </p>
@@ -28,7 +28,7 @@
   Nautilus (gnome-vfs) can't yet handle compressed GIMP native files
 </p>
 
-<div class="subtitle">Choosing a Color Palette</div>
+<h2>Choosing a Color Palette</h2>
 <p class="images">
   <img src="palette.png" alt=""/>
 </p>
@@ -47,7 +47,7 @@
   Having a complex palette with many variations will make it complex and hard to navigate.
 </p>
 
-<div class="subtitle">Getting Started</div>
+<h2>Getting Started</h2>
 <p>
   When you're ready to start, run GIMP by selecting <span class="filter">Applications-&gt;Graphics-&gt;GIMP</span> Image Editor from your menu panel, 
   or typing <b>gimp</b> at the command line. If you haven't used GIMP before, the default window layout may be a little confusing. 
@@ -70,14 +70,14 @@
   <span class="filter">&lt;Image&gt;View-&gt;Toggle selection</span>.
 </p>
 
-<div class="subtitle">A Few Tricks</div>
+<h2>A Few Tricks</h2>
 <p>
   It seems at first that creating an icon is incredibly restrictive. After all, you have just a tiny grid where you will soon run out of pixels. 
   However, there are a few tricks you can use to fool the human eye and make your icons look better. 
   Basically, you'll be simulating or implying shape with color value and opacity.
 </p>
 
-<div class="subtitle">Antialiasing</div>
+<h2>Antialiasing</h2>
 <p class="images">
   <img src="aa1.png" alt=""/>
   <img src="aa2.png" alt=""/>
@@ -104,14 +104,14 @@
   Make sure you turn on the hard edges option, for maximum precision.
 </p>
 
-<div class="subtitle">Shading with Gradients</div>
+<h2>Shading with Gradients</h2>
 <p>
   You can use gradients to enhance the shape of an object. For round objects, choose a radial gradient, and for curves, use a linear gradient. 
   For filling surfaces, you'll want to use linear gradients almost every time. Even when the surface is supposed to be flat, a slight gradient adds realism. 
   Make sure to keep the gradient subtle, though: too much of a difference between the two extremes and you'll ruin the effect.
 </p>
 
-<div class="subtitle">Highlights and Shadows</div>
+<h2>Highlights and Shadows</h2>
 <p>
   For any given object, make sure you experiment a little with highlights and shadows, and not just the regular drop shadow used on most Gnome icons. 
   Try giving your icon real material properties with some light reflections. Whether it's just a little gleam or shine from a corner or a suggestion 
@@ -122,12 +122,12 @@
   so you don't have to worry about overspray. To do hard highlights, use the one pixel pencil tool and, as before, a lowered opacity for the color.
 </p>
 
-<div class="subtitle">Work Example</div>
+<h2>Work Example</h2>
 <p>
   In this small tutorial, Ximian artist Jakub Steiner will demonstrate most of the techniques described in the section called "A Few Tricks" as he draws a TV icon.
 </p>
 
-<div class="subtitle">Basic Shape</div>
+<h2>Basic Shape</h2>
 <p class="images">
   <img src="rectangle.png" alt=""/>
 </p>
@@ -143,7 +143,7 @@
   Then, use the eraser tool to smooth the edges of the square so that the shape is better. This will also add a slight white shine to the corners of the image.
 </p>
 
-<div class="subtitle">Making it Plastic</div>
+<h2>Making it Plastic</h2>
 <p class="images">
   <img src="gradient.png" alt=""/>
 </p>
@@ -163,7 +163,7 @@
   and a black one to create shadows. By setting opacity of the brush to something like 20% you can get results similar to the image above.
 </p>
 
-<div class="subtitle">Modelling the Screen</div>
+<h2>Modelling the Screen</h2>
 <p class="images">
   <img src="screen.png" alt=""/>
 </p>
@@ -191,7 +191,7 @@
   Choosing a gradient instead of a solid fill provides a bit of shine to the button, so even if it's just a few pixels across, it looks distinct and three dimensional.
 </p>
 
-<div class="subtitle">Modelling the Remote Control</div>
+<h2>Modelling the Remote Control</h2>
 <p class="images">
   <img src="remote1.png" alt=""/>
 </p>
@@ -237,7 +237,7 @@
   then fill it with a gradient, and apply highlights and shadows with the pencil tool as needed.
 </p>
 
-<div class="subtitle">Adding Glow</div>
+<h2>Adding Glow</h2>
 <p class="images">
   <img src="remote9.png" alt=""/>
 </p>
@@ -248,7 +248,7 @@
   Now set the layer mode to <i>overlay</i>, creating the transparency effect.
 </p>
 
-<div class="subtitle">The Final Product</div>
+<h2>The Final Product</h2>
 <p class="images">
   <img src="finished.png" alt=""/>
 </p>
