--- a/tutorials/Custom_Brushes/index.html
+++ b/tutorials/Custom_Brushes/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Custom Brushes Tutorial</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Custom Brushes Tutorial</div>
+<h1>Custom Brushes Tutorial</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p>
    Along with the brushes already included, you can create custom brushes using two methods. 
    One which is a black-n-white brush which is saved in .GBR extension. The content of this brush is treated as an alpha-channel. 
@@ -12,7 +12,7 @@
    with colour and this brush will also have multiple images.
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="thumb1.jpg" alt=""/>
 </p>
@@ -20,7 +20,7 @@
   Create a new image the size of the brush you will be creating. For out exanmple, we will be creating a 64x64 image.
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="thumb2.jpg" alt=""/>
 </p>
@@ -30,7 +30,7 @@
   The layer name really doesn't matter in this case. 
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="thumb3.jpg" alt=""/>
 </p>
@@ -41,7 +41,7 @@
   NOTE: Make sure you save your image as a standard GIMP .XCF file because GIMP cannot re-open a picture brush once it's saved.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="thumb4.jpg" alt=""/>
 </p>
@@ -57,7 +57,7 @@
   You can also adjust this value in the Brush dialog. 
 </p>
 
-<div class="subtitle">Final</div>
+<h2>Final</h2>
 <p class="images">
   <img src="thumb5.jpg" alt=""/>
 </p>
