--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -3,9 +3,9 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
-<div class="heading">Tutorials</div>
+<h1>Tutorials</h1>
 
-<div class="subtitle">Beginner</div>
+<h2>Beginner</h2>
 <p>
   <a href="Lite_Quickies/">GIMPLite Quickies</a>  Use The GIMP for your graphics
   needs without learning advanced computer graphics methods.
@@ -43,7 +43,8 @@
 <p>
   <a href="Custom_Brushes/">Custom Brushes</a> Make custom brushes for your GIMP.
 </p>
-<div class="subtitle">Intermediate</div>
+
+<h2>Intermediate</h2>
 <p>
   <a href="Drawing_Shapes/">Drawing Shapes With Bezier</a> Make a dimensional box
   with bezier curves and gradients.
@@ -74,7 +75,8 @@
 <p>
  <a href="Simple_Animations/">Simple Animations</a> Learn how to work with GIMP's layers as animation frames.
 </p>
-<div class="subtitle">Expert</div>
+
+<h2>Expert</h2>
 <p>
   <a href="Image_Pipes/">Make GIMP Image Pipes</a> Rank and Dimension.  The GIMP's
   Image Pipes can do alot.  
@@ -104,7 +106,7 @@
  <a href="Advanced_Animations/">Advanced Animations</a> Learn how to make an animation with GAP.
 </p>
 
-<div class="subtitle">Photo Editing</div>
+<h2>Photo Editing</h2>
 <p>
   <a href="Color2BW/">Color2BW</a> Converting Color Images to B&amp;W.
 </p>
@@ -136,7 +138,7 @@
   <a href="Selective_Color/">Selective Colorization</a> Convert images to black and white and restore color selectively.
 </p>
 
-<div class="subtitle">HTML</div>
+<h2>HTML</h2>
 <p>
   <a href="Perlotine/">Perlotine</a> Get your image in place with the help of perlotine and tables.
 </p>
@@ -145,7 +147,7 @@
 </p>
 
 
-<div class="subtitle">Script Authoring (Presented Alphabetically)</div>
+<h2>Script Authoring (Presented Alphabetically)</h2>
 <p>
   <a href="Drawables/">Working With The Image</a> Before you script, know what an
   image is and isn't and what a drawable is. Or at least be able to take a good guess
