--- a/tutorials/Changing_Background_Color_1/index.html
+++ b/tutorials/Changing_Background_Color_1/index.html
@@ -2,9 +2,9 @@
 <title>GIMP - Changing Background Color 1</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-tutorial-init.xhtml" -->
-<div class="heading">Changing Background Color 1</div>
+<h1>Changing Background Color 1</h1>
 
-<div class="subtitle">Intention</div>
+<h2>Intention</h2>
 <p class="images">
   <img src="pr.png" alt=""/>
   to
@@ -16,7 +16,7 @@
   images as source and destination. This tutorial doesn't address the complexities of handling real-world photos in this manner, but does briefly discuss it at the end.
 </p>
 
-<div class="subtitle">Why Not a Selection</div>
+<h2>Why Not a Selection</h2>
 <p class="images">
   <img src="problem1.png" alt=""/>
   <img src="problem2.png" alt=""/>
@@ -42,7 +42,7 @@
   which will stick out. You can go too far, and blend it back to something close, but this is time consuming. Instead, may I suggest the rest of the tutorial?
 </p>
 
-<div class="subtitle">Step 1</div>
+<h2>Step 1</h2>
 <p class="images">
   <img src="menu.png" alt=""/>
 </p>
@@ -51,7 +51,7 @@
   where &lt;image&gt; means to right click on the image. If its grayed-out, it means that you have an indexed image. If its not there, upgrade your gimp to 1.2.x.
 </p>
 
-<div class="subtitle">Step 2</div>
+<h2>Step 2</h2>
 <p class="images">
   <img src="select_bg.png" alt=""/>
 </p>
@@ -59,7 +59,7 @@
   Next use the <img src="picker_button.png" alt=""/> Color Picker Tool to select the background color. 
 </p>
 
-<div class="subtitle">Step 3</div>
+<h2>Step 3</h2>
 <p class="images">
   <img src="dnd.png" alt=""/>
 </p>
@@ -69,7 +69,7 @@
   the Foreground - drag n' drop doesn't work. Click OK after the color indicator on the Color To Alpha plug-in is changed to blue.
 </p>
 
-<div class="subtitle">Step 4</div>
+<h2>Step 4</h2>
 <p class="images">
   <img src="pr_alpha.png" alt=""/>
   <img src="solution_zoom.png" alt=""/>
@@ -78,7 +78,7 @@
   There should now be a nice green and alpha image with no trace of the blue left. Next add the new background.
 </p>
 
-<div class="subtitle">Step 5</div>
+<h2>Step 5</h2>
 <p class="images">
   <img src="layer_create.png" alt=""/>
 </p>
@@ -86,7 +86,7 @@
   Now create a New Layer (have Forground set to Red when you do this). Lower the newly created layer.
 </p>
 
-<div class="subtitle">Final</div>
+<h2>Final</h2>
 <p class="images">
   <img src="pr_red.png" alt=""/>
 </p>
@@ -94,7 +94,7 @@
  The image should now be green on red, with no trace of blue!
 </p>
 
-<div class="subtitle">This may not work as well for you for 2 reasons:</div>
+<h2>This may not work as well for you for 2 reasons:</h2>
 <ul>
   <li>Photo's don't tend to have one color you can choose like that</li>
   <li>The foreground may contain portions of that color that are removed by the plug-in</li>
